--- a/.alacritty/.alacritty.yml
+++ b/.alacritty/.alacritty.yml
@@ -1,6 +1,11 @@
-
+font:
+  size: 14.0
 shell:
-  program: /usr/local/bin/nu
+  program: /bin/zsh
+  args:
+    - -c
+    - -i
+    - "zellij"
 # MAC specific keybindings
 key_bindings:
   - { key: Right, mods: Alt, chars: "\x1BF" }
@@ -80,3 +85,47 @@ key_bindings:
   - { key: Key6,      mods: Alt|Shift, chars: "\x1b^"                       } # Alt + ^
   - { key: Backslash, mods: Alt,       chars: "\x1b\\"                      } # Alt + \
   - { key: Backslash, mods: Alt|Shift, chars: "\x1b|"                       } # Alt + |
+
+
+# Colors (Doom One)
+colors:
+  # Default colors
+  primary:
+    background: '0x282c34'
+    foreground: '0xbbc2cf'
+
+  # Normal colors
+  normal:
+    black:   '0x282c34'
+    red:     '0xff6c6b'
+    green:   '0x98be65'
+    yellow:  '0xecbe7b'
+    blue:    '0x51afef'
+    magenta: '0xc678dd'
+    cyan:    '0x46d9ff'
+    white:   '0xbbc2cf'
+
+# Font configuration (changes require restart)
+font:
+  # Normal (roman) font face
+  normal:
+    family: Iosevka
+    style: Regular
+
+  # Bold font face
+  bold:
+    family: Iosevka
+    style: Bold
+
+  # Italic font face
+  italic:
+    family: Iosevka
+    style: Italic
+
+  # Bold italic font face
+  bold_italic:
+    family: Iosevka
+    style: Bold Italic
+
+  # Point size
+  size: 18.0
